save btn functionailty initial

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <p id="hour-text">9:00 AM</p>
         </div>
         <div id="event-text-div" class="col-9 hour border-bottom border-right">
-          <p id="event-text"></p>
+          <p id="event-text">Event Text</p>
         </div id="save-btn-div">
-          <button id="save-btn" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+          <button id="save-btn" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
