--- a/index.html
+++ b/index.html
@@ -28,19 +28,110 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <!-- container for all rows -->
     <div class="container" id="all-rows-container">
 
       <!-- 9 AM  -->
-      <div id="data-row" class="row">
-        <div id="hour-text-div" class="col-2 hour border-bottom border-right">
-          <p id="hour-text">9:00 AM</p>
+      <div id="hour-0" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-0" class="hourtext">Time</p>
         </div>
-        <div id="event-text-div" class="col-9 hour border-bottom border-right">
-          <p id="event-text">Event Text</p>
-        </div id="save-btn-div">
-          <button id="save-btn" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+        <div id="eventblock-0" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-0"></p>
+        </div>
+          <button id="savebtn-0" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
+
+      <!-- 10 AM  -->
+      <div id="hour-1" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-1" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-1" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-1"></p>
+        </div>
+          <button id="savebtn-1" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 11 AM  -->
+      <div id="hour-2" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-2" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-2" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-2"></p>
+        </div>
+          <button id="savebtn-2" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+
+      <!-- 12 PM  -->
+      <div id="hour-3" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-3" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-3" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-3"></p>
+        </div>
+          <button id="savebtn-3" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 1 PM  -->
+      <div id="hour-4" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-4" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-4" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-4"></p>
+        </div>
+          <button id="savebtn-4" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 2 PM  -->
+      <div id="hour-5" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-5" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-5" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-5"></p>
+        </div>
+          <button id="savebtn-5" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 3 PM  -->
+      <div id="hour-6" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-6" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-6" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-6"></p>
+        </div>
+          <button id="savebtn-6" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 4 PM  -->
+      <div id="hour-7" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-7" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-7" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-7"></p>
+        </div>
+          <button id="savebtn-7" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+
+      <!-- 5 PM  -->
+      <div id="hour-8" class="row">
+        <div class="col-2 hour border-bottom border-right">
+          <p id="hourtext-8" class="hourtext">Time</p>
+        </div>
+        <div id="eventblock-8" class="event-block col-9 hour border-bottom border-right">
+          <p class="col-10" id="eventtext-8"></p>
+        </div>
+          <button id="savebtn-8" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
+      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
