local storage updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p id="hourtext-0" class="hourtext">Time</p>
         </div>
         <div id="eventblock-0" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-0"></p>
+          <p class="eventtext col-10" id="eventtext-0"></p>
         </div>
           <button id="savebtn-0" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -49,7 +49,7 @@
           <p id="hourtext-1" class="hourtext">Time</p>
         </div>
         <div id="eventblock-1" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-1"></p>
+          <p class="eventtext col-10" id="eventtext-1"></p>
         </div>
           <button id="savebtn-1" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -60,7 +60,7 @@
           <p id="hourtext-2" class="hourtext">Time</p>
         </div>
         <div id="eventblock-2" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-2"></p>
+          <p class="eventtext col-10" id="eventtext-2"></p>
         </div>
           <button id="savebtn-2" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -72,7 +72,7 @@
           <p id="hourtext-3" class="hourtext">Time</p>
         </div>
         <div id="eventblock-3" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-3"></p>
+          <p class="eventtext col-10" id="eventtext-3"></p>
         </div>
           <button id="savebtn-3" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -83,7 +83,7 @@
           <p id="hourtext-4" class="hourtext">Time</p>
         </div>
         <div id="eventblock-4" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-4"></p>
+          <p class="eventtext col-10" id="eventtext-4"></p>
         </div>
           <button id="savebtn-4" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -94,7 +94,7 @@
           <p id="hourtext-5" class="hourtext">Time</p>
         </div>
         <div id="eventblock-5" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-5"></p>
+          <p class="eventtext col-10" id="eventtext-5"></p>
         </div>
           <button id="savebtn-5" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -105,7 +105,7 @@
           <p id="hourtext-6" class="hourtext">Time</p>
         </div>
         <div id="eventblock-6" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-6"></p>
+          <p class="eventtext col-10" id="eventtext-6"></p>
         </div>
           <button id="savebtn-6" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -116,7 +116,7 @@
           <p id="hourtext-7" class="hourtext">Time</p>
         </div>
         <div id="eventblock-7" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-7"></p>
+          <p class="eventtext col-10" id="eventtext-7"></p>
         </div>
           <button id="savebtn-7" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
@@ -127,7 +127,7 @@
           <p id="hourtext-8" class="hourtext">Time</p>
         </div>
         <div id="eventblock-8" class="event-block col-9 hour border-bottom border-right">
-          <p class="col-10" id="eventtext-8"></p>
+          <p class="eventtext col-10" id="eventtext-8"></p>
         </div>
           <button id="savebtn-8" type="submit" class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
